Fixed a ton of IE bugs. IE7 almost completely works, the comet long-polling is a tad broken in IE7 for versus games, but that's the only IE bug left I believe.

--- a/tictactoe/tictactoe/public/static/css/tictactoe.css
+++ b/tictactoe/tictactoe/public/static/css/tictactoe.css
@@ -50,8 +50,8 @@ a {
     width: 128px !important;
     height: 128px !important;
     border: 0px !important;
-    background-color: transparent !important;
-    color: transparent;
+    background-color: white !important;
+    color: white;
 }
 
 .message {
